--- a/index.ipynb
+++ b/index.ipynb
@@ -29,11 +29,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "P1 = (0.5)*(4/10) + (0.5)*(6/10)\n",
+    "print(P1)"
    ]
   },
   {
@@ -49,11 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.25\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "P2 = (0.7)*(0.1) + (0.3)*(0.6)\n",
+    "print(P2)"
    ]
   },
   {
@@ -88,11 +108,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.21\n",
+      "0.45499999999999996\n",
+      "0.26373626373626374\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "P3a = (0.35)*(0.60)\n",
+    "print(P3a)\n",
+    "P3b = P3a + (0.4)*(0.3) + (0.25)*(0.5)\n",
+    "print(P3b)\n",
+    "P3c = (0.4*0.3)/P3b\n",
+    "print(P3c)"
    ]
   },
   {
@@ -122,11 +158,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.034999999999999996\n",
+      "0.965\n",
+      "0.45000000000000007\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "P4a = 0.4*0.25*0.35\n",
+    "print(P4a)\n",
+    "P4b = 1 - P4a\n",
+    "print(P4b)\n",
+    "P4c = (0.6*0.75*0.35)+(0.75*0.4*0.65)+(0.65*0.6*0.25)\n",
+    "print(P4c)\n"
    ]
   },
   {
@@ -147,11 +199,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "P5 = (1/3)*(0.75)+(1/3)*(0.6)+(1/3)*(0.45)\n",
+    "print(P5)"
    ]
   },
   {
@@ -180,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
